# zenoh-counter-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/: CLAUDE.md  settings.json  tdd-template.md
.claude/agent-memory/tdd-workflow-tdd-implementer/: MEMORY.md
.claude/commands/: tdd-new.md  tdd-test.md  tdd-workflow.md
.claude/templates/: feature-notes.md
app/: CMakeLists.txt  counter_router.cpp  counter_sub.cpp  main.cpp
cmake/: Coverage.cmake
context/: README.md
context/project/: vscode-gtest-integration-analysis.md
context/roles/: ca-architect.md  ci-implementer.md  cp-planner.md
context/standards/: cmake-best-practices.md  cpp-changelog.md  cpp-coding-standards.md  cpp-commits.md  cpp-tdd.md  cpp-tooling.md  cpp-versioning.md  googletest-reference.md  version-control.md
ext/: .gitkeep
include/counter/: publisher.hpp
include/mylib/: mylib.hpp
issues/: 001-shm-counter-publisher.md
scripts/: demo.sh
src/: CMakeLists.txt  mylib.cpp  publisher.cpp
tests/: CMakeLists.txt  test_integration.cpp  test_mylib.cpp  test_publisher.cpp  test_subscriber.cpp
tests/integration/: helpers.sh  test_cleanup_test.sh  test_peer_interop.sh  test_peer_interop_test.sh  test_prereqs_test.sh  test_router_interop.sh  test_router_interop_test.sh
